# MSC_project_code

./: Comparative data.ipynb  readme.txt  seeData.ipynb
BM3D/: readme.txt  results_BM3D.csv  seeData.ipynb
BM3D/Cmake/: CMakeLists.txt  main.cpp
add_gaussian_noise/: add_gaussian_noise.ipynb
avefilter/: avefilt.m  results_avefilter.csv
medianfilter/: medianfilt.m  results_medianfilt.csv
nlm-image-denoising/: NLmeansfilt.m  results_nlm.csv
